# craftech-challenge-2025

./: README.md
.github/workflows/: ci-cd.yml
CI-CD/: README.md  compose.yml  index.html
django-react-app/: .env.example  README.md  compose.yml
django-react-app/backend/: Dockerfile  entrypoint.sh  requirements.txt
django-react-app/backend/core/: settings.py
django-react-app/frontend/: Dockerfile
network/: README.md  frontend.py  network.py  pyproject.toml
