[tool.poetry]
name = "network"
version = "0.1.0"
description = "Network diagrams"
authors = ["Jeremías Benítez <jerebntz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
diagrams = "^0.24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
